# judge-read

./: .gitignore  README.md
backend/: README.md  data_pipeline.py  db_setup.py  main.py  mcp_server.py  pyproject.toml  test_framework.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
