[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cohere>=7.0.0",
    "datasets>=5.0.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langsmith>=0.1.0",
    "mcp[cli]>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pypdf>=5.0.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "tqdm>=4.66.0",
    "unstructured",
    "uvicorn>=0.49.0",
    "watchfiles>=1.2.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
